--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,13 +1,12 @@
 .main_wrapper {
-  /* color: black; */
-  margin-top: 10px;
-  /* background-color: whitesmoke; */
-  border-width: 3px;
+  color: black;
+  margin-top: 15px;
+  border-width: 3.5px;
   border-style: solid;
   border-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0),
-      #131213,
+      #704b70,
       #b353e3,
       #8d4ff1,
       #6a4bfe
