--- a/src/components/Asset/Asset.css
+++ b/src/components/Asset/Asset.css
@@ -1,4 +1,12 @@
 .dash {
-  background-color: rgba(230, 229, 229, 0.7);
+  background-color: rgb(246, 246, 246);
   border-radius: 10px;
+  padding: 7px;
+}
+
+.asset_container {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 70px 1fr 1.1fr;
+  gap: 8px;
 }
