--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,6 +1,6 @@
 .dashboard_wrapper {
   height: 100%;
-  background-color: whitesmoke;
+  background-color: white;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
 }
