--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,3 +1,7 @@
-.overview_wrapper {
-  /* background-color: #949191; */
+.overview_container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 70px 1.3fr 1fr;
+  gap: 8px;
 }
