--- a/src/components/Asset/Asset.css
+++ b/src/components/Asset/Asset.css
@@ -7,6 +7,6 @@
 .asset_container {
   height: 100%;
   display: grid;
-  grid-template-rows: 70px 1fr 1.1fr;
+  /* grid-template-rows: 70px 1fr 1.1fr; */
   gap: 8px;
 }
