--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -2,6 +2,21 @@
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 70px 1.3fr 1fr;
+  /* grid-template-rows: 70px 1.3fr 1fr; */
   gap: 8px;
+}
+.widget_title_wrapper {
+  /* border: 1px solid red; */
+  margin: 10px 0;
+}
+
+.transaction-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 680px) {
+  .overview_container {
+    display: flex;
+    flex-direction: column;
+  }
 }
