--- a/src/components/Asset/Asset.css
+++ b/src/components/Asset/Asset.css
@@ -8,5 +8,6 @@
   height: 100%;
   display: grid;
   /* grid-template-rows: 70px 1fr 1.1fr; */
+  grid-template-rows: 80px 0.8fr 1fr;
   gap: 8px;
 }
