--- a/src/components/Dash/Dashwidget.css
+++ b/src/components/Dash/Dashwidget.css
@@ -7,6 +7,7 @@
   height: 100%;
   grid-template-columns: 2fr 1.3fr;
   column-gap: 15px;
+  min-height: 100lvh;
 }
 .loader {
   position: fixed;
@@ -28,6 +29,21 @@
   left: 50%;
   color: black;
   transform: translate(-50%, -50%);
+}
+
+.widget {
+  animation: fadeIn 1s ease-in both;
+  animation-delay: 0.5s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 @media screen and (max-width: 800px) {
   .dash_container {
