--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -2,7 +2,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* grid-template-rows: 70px 1.3fr 1fr; */
+  grid-template-rows: 80px 0.8fr 1fr;
   gap: 8px;
 }
 .widget_title_wrapper {
@@ -18,5 +18,6 @@
   .overview_container {
     display: flex;
     flex-direction: column;
+    min-height: 100lvh;
   }
 }
